--- a/README.html
+++ b/README.html
@@ -194,7 +194,7 @@ summary {
 <p>is recommended.</p>
 <p>The <a href="https://github.com/DARTH-git/Cohort-modeling-tutorial/tree/master/R"><code>R</code></a> folder includes three different scripts corresponding to the different implementations of the cSTM: - <a href="https://github.com/DARTH-git/Cohort-modeling-tutorial/blob/master/R/STM_01.R"><code>STM_01.R</code></a>: time-independent cSTM - <a href="https://github.com/DARTH-git/Cohort-modeling-tutorial/blob/master/R/STM_02.R"><code>STM_02.R</code></a>: age-dependent cSTM with calculations of epidemiological outcomes - <a href="https://github.com/DARTH-git/Cohort-modeling-tutorial/blob/master/R/STM_03.R"><code>STM_03.R</code></a>: age- and history-dependent cSTM</p>
 <p>In addition we include the <a href="https://github.com/DARTH-git/Cohort-modeling-tutorial/tree/master/data"><code>data</code></a> folder with age-specific mortality for the age-dependent and age- and history-dependent cSTM.</p>
-<p>To run the cost-effectiveness analysis, you require The Decision Analytic Modeling Package (<a href="https://github.com/DARTH-git/dampack"><code>dampack</code></a>), an R package for analyzing and visualizing the health economic outputs of mathematical models.</p>
+<p>To run the cost-effectiveness analysis, you require The Decision Analytic Modeling Package (<a href="https://github.com/DARTH-git/dampack"><code>dampack</code></a>), an R package for analyzing and visualizing the health economic outputs of decision models.</p>
 <div id="full-list-of-contributors" class="section level2">
 <h2>Full list of Contributors:</h2>
 <ul>
