--- a/README.html
+++ b/README.html
@@ -201,7 +201,7 @@ summary {
 <li><p><a href="https://github.com/feralaes">Fernando Alarid-Escudero</a></p></li>
 <li><p><a href="https://github.com/krijkamp">Eline Krijkamp</a></p></li>
 <li><p><a href="https://github.com/evaenns">Eva Enns</a></p></li>
-<li><p>Myriam Hunink</p></li>
+<li><p><a href="http://www.erasmus-epidemiology.nl/people/profile.php?id=45">Myriam Hunink</a></p></li>
 <li><p><a href="https://github.com/ppehli">Petros Pechlivanoglou</a></p></li>
 <li><p><a href="https://github.com/hjalal">Hawre Jalal</a></p></li>
 </ul>
